--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -39,3 +39,9 @@ Mw:
       Tx_Extbase_Persistence_QueryInterface: TYPO3\Flow\Persistence\QueryInterface
       Tx_Extbase_Persistence_Repository: TYPO3\Flow\Persistence\Repository
       t3lib_div: Mw\Metamorph\TYPO3\Utility\GeneralUtility
+
+TYPO3:
+  Flow:
+    object:
+      excludeClasses:
+        'nikic.phpparser': ['PhpParser\\.*']
