--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "type": "typo3-flow-package",
     "description": "Add description here",
     "require": {
+        "symfony/console": "*",
         "typo3/flow": "*"
     },
     "autoload": {
