Implement XLIFF translation with XSLT.

--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -42,6 +42,9 @@ Mw:
             - ExtbaseClassEliminationVisitor
             - ReplaceMakeInstanceCallsVisitor
             - ReplaceAnnotationsVisitor
+      transformLocallang:
+        name: XliffConversion
+        position: 90
     staticReplacements:
       TYPO3\CMS\Extbase\Mvc\Controller\ActionController: TYPO3\Flow\Mvc\Controller\ActionController
       TYPO3\CMS\Core\Utility\GeneralUtility: Mw\Metamorph\TYPO3\Utility\GeneralUtility
