--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "mw/metamorph",
     "type": "typo3-flow-package",
     "description": "Add description here",
+    "license": "MIT",
     "require": {
         "typo3/flow": "*",
         "nikic/php-parser": "dev-master",
