--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -54,7 +54,9 @@ Mw:
       TYPO3\CMS\Extbase\Persistence\QueryInterface: TYPO3\Flow\Persistence\QueryInterface
       TYPO3\CMS\Extbase\Persistence\Repository: TYPO3\Flow\Persistence\Repository
       TYPO3\CMS\Extbase\Domain\Model\FrontendUser: Mw\T3Compat\Domain\Model\FrontendUser
+      TYPO3\CMS\Extbase\Domain\Model\FrontendUserGroup: Mw\T3Compat\Domain\Model\FrontendUserGroup
       TYPO3\CMS\Extbase\Domain\Repository\FrontendUserRepository: Mw\T3Compat\Domain\Repository\FrontendUserRepository
+      TYPO3\CMS\Extbase\Domain\Repository\FrontendUserGroupRepository: Mw\T3Compat\Domain\Repository\FrontendUserGroupRepository
       Tx_Extbase_Mvc_Controller_ActionController: TYPO3\Flow\Mvc\Controller\ActionController
       Tx_Fluid_Core_ViewHelper_AbstractViewHelper: TYPO3\Fluid\Core\ViewHelper\AbstractViewHelper
       Tx_Fluid_ViewHelpers_IfViewHelper: TYPO3\Fluid\ViewHelpers\IfViewHelper
@@ -62,7 +64,9 @@ Mw:
       Tx_Extbase_Persistence_QueryInterface: TYPO3\Flow\Persistence\QueryInterface
       Tx_Extbase_Persistence_Repository: TYPO3\Flow\Persistence\Repository
       Tx_Extbase_Domain_Model_FrontendUser: Mw\T3Compat\Domain\Model\FrontendUser
+      Tx_Extbase_Domain_Model_FrontendUserGroup: Mw\T3Compat\Domain\Model\FrontendUserGroup
       Tx_Extbase_Domain_Repository_FrontendUserRepository: Mw\T3Compat\Domain\Repository\FrontendUserRepository
+      Tx_Extbase_Domain_Repository_FrontendUserGroupRepository: Mw\T3Compat\Domain\Repository\FrontendUserGroupRepository
       t3lib_div: Mw\Metamorph\TYPO3\Utility\GeneralUtility
     resourceExtensions:
       templates: {targetPath: Private/Templates, extensions: [html, htm]}
