Add @Flow\Scope("singleton") annotation where necessary.

--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -41,6 +41,7 @@ Mw:
             - ExtbaseClassReplacementVisitor
             - ExtbaseClassEliminationVisitor
             - ReplaceMakeInstanceCallsVisitor
+            - RewriteSingletonsVisitor
             - ReplaceAnnotationsVisitor
       transformLocallang:
         name: XliffConversion
