--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -48,7 +48,7 @@ Mw:
         position: 90
     staticReplacements:
       TYPO3\CMS\Extbase\Mvc\Controller\ActionController: TYPO3\Flow\Mvc\Controller\ActionController
-      TYPO3\CMS\Core\Utility\GeneralUtility: Mw\Metamorph\TYPO3\Utility\GeneralUtility
+      TYPO3\CMS\Core\Utility\GeneralUtility: Mw\T3Compat\Utility\GeneralUtility
       TYPO3\CMS\Fluid\Core\ViewHelper\AbstractViewHelper: TYPO3\Fluid\Core\ViewHelper\AbstractViewHelper
       TYPO3\CMS\Fluid\ViewHelpers\IfViewHelper: TYPO3\Fluid\ViewHelpers\IfViewHelper
       TYPO3\CMS\Extbase\Persistence\ObjectStorage: Doctrine\Common\Collections\Collection
@@ -70,7 +70,7 @@ Mw:
       Tx_Extbase_Domain_Repository_FrontendUserRepository: Mw\T3Compat\Domain\Repository\FrontendUserRepository
       Tx_Extbase_Domain_Repository_FrontendUserGroupRepository: Mw\T3Compat\Domain\Repository\FrontendUserGroupRepository
       Tx_Extbase_Validation_Validator_AbstractValidator: TYPO3\Flow\Validation\Validator\AbstractValidator
-      t3lib_div: Mw\Metamorph\TYPO3\Utility\GeneralUtility
+      t3lib_div: Mw\T3Compat\Utility\GeneralUtility
     resourceExtensions:
       templates: {targetPath: Private/Templates, extensions: [html, htm]}
       languageFiles: {targetPath: Private/Language, extensions: [xml, xlf]}
