Inject utility classes.

--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -43,6 +43,7 @@ Mw:
             - ReplaceMakeInstanceCallsVisitor
             - RewriteSingletonsVisitor
             - ReplaceAnnotationsVisitor
+            - InjectUtilitiesVisitor
       transformLocallang:
         name: XliffConversion
         position: 90
