--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -65,6 +65,7 @@ Mw:
       TYPO3\CMS\Extbase\Domain\Model\FrontendUserGroup: Mw\T3Compat\Domain\Model\FrontendUserGroup
       TYPO3\CMS\Extbase\Domain\Repository\FrontendUserRepository: Mw\T3Compat\Domain\Repository\FrontendUserRepository
       TYPO3\CMS\Extbase\Domain\Repository\FrontendUserGroupRepository: Mw\T3Compat\Domain\Repository\FrontendUserGroupRepository
+      TYPO3\CMS\Extbase\Tests\Unit\BaseTestCase: TYPO3\Flow\Tests\UnitTestCase
       TYPO3\CMS\Extbase\Validation\Validator\AbstractValidator: TYPO3\Flow\Validation\Validator\AbstractValidator
       Tx_Extbase_Mvc_Controller_ActionController: TYPO3\Flow\Mvc\Controller\ActionController
       Tx_Fluid_Core_ViewHelper_AbstractViewHelper: TYPO3\Fluid\Core\ViewHelper\AbstractViewHelper
@@ -76,6 +77,7 @@ Mw:
       Tx_Extbase_Domain_Model_FrontendUserGroup: Mw\T3Compat\Domain\Model\FrontendUserGroup
       Tx_Extbase_Domain_Repository_FrontendUserRepository: Mw\T3Compat\Domain\Repository\FrontendUserRepository
       Tx_Extbase_Domain_Repository_FrontendUserGroupRepository: Mw\T3Compat\Domain\Repository\FrontendUserGroupRepository
+      Tx_Extbase_Tests_Unit_BaseTestCase: TYPO3\Flow\Tests\UnitTestCase
       Tx_Extbase_Validation_Validator_AbstractValidator: TYPO3\Flow\Validation\Validator\AbstractValidator
       t3lib_div: Mw\T3Compat\Utility\GeneralUtility
     resourceExtensions:
