Raise TYPO3 Flow dependency to >= 2.3.0

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "Convert TYPO3 CMS extensions to TYPO3 Flow packages",
     "license": "MIT",
     "require": {
-        "typo3/flow": "*",
+        "typo3/flow": ">= 2.3.0",
         "nikic/php-parser": "dev-master",
         "symfony/console": ">= 2.5",
         "gitonomy/gitlib": "dev-master",
