--- a/Configuration/Objects.yaml
+++ b/Configuration/Objects.yaml
@@ -4,6 +4,56 @@ Mw\Metamorph\Command\MorphCommandController:
       object:
         name: Symfony\Component\Console\Output\ConsoleOutput
 
+Mw\Metamorph\Transformation\ClassInventory:
+  properties:
+    classNameConversionStrategy:
+      object:
+        name: Mw\Metamorph\Transformation\ClassNameConversion\CompoundConversionStrategy
+
+Mw\Metamorph\Transformation\PackageClassRewrite:
+  properties:
+    printer:
+      object:
+        name: PhpParser\PrettyPrinter\Standard
+
+Mw\Metamorph\Transformation\DatabaseMigration\Strategy\CompatibleMigrationStrategy:
+  properties:
+    printer:
+      object:
+        name: PhpParser\PrettyPrinter\Standard
+
+Mw\Metamorph\Transformation\DatabaseMigration\Strategy\FullMigrationStrategy:
+  properties:
+    printer:
+      object:
+        name: PhpParser\PrettyPrinter\Standard
+
+PhpParser\Parser:
+  className: PhpParser\Parser
+  scope: prototype
+  autowiring: off
+  arguments:
+    1:
+      object:
+        name: PhpParser\Lexer
+
+PhpParser\Lexer:
+  className: PhpParser\Lexer
+  scope: singleton
+  autowiring: off
+
+PhpParser\NodeTraverser:
+  className: PhpParser\NodeTraverser
+  scope: prototype
+
+PhpParser\PrettyPrinterAbstract:
+  className: PhpParser\PrettyPrinterAbstract
+  scope: singleton
+
+PhpParser\PrettyPrinter\Standard:
+  className: PhpParser\PrettyPrinter\Standard
+  scope: singleton
+
 Symfony\Component\Console\Output\ConsoleOutput:
   className: Symfony\Component\Console\Output\ConsoleOutput
   scope: prototype
