Fix deprecated flash message usages

--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -44,6 +44,7 @@ Mw:
             - RewriteSingletonsVisitor
             - ReplaceAnnotationsVisitor
             - InjectUtilitiesVisitor
+            - FlashMessageVisitor
       transformLocallang:
         name: XliffConversion
         position: 90
