Fix extension keys in controller redirects

--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -45,6 +45,7 @@ Mw:
             - ReplaceAnnotationsVisitor
             - InjectUtilitiesVisitor
             - FlashMessageVisitor
+            - PackageRedirectVisitor
       transformLocallang:
         name: XliffConversion
         position: 90
