--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -32,7 +32,7 @@ Mw:
           - createPackages
           - resourceInventory
       rewritePackageClasses:
-        name: PackageClassRewrite
+        name: GenericAstVisitorTransformation
         dependsOn:
           - createClasses
         settings:
@@ -43,7 +43,7 @@ Mw:
         dependsOn:
           - rewritePackageClasses
       refactorClasses:
-        name: PackageClassRewrite
+        name: GenericAstVisitorTransformation
         dependsOn:
           - analyzeClasses
         settings:
