--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -1,5 +1,6 @@
 Mw:
   Metamorph:
+
     transformations:
       extensionInventory:
         name: ExtensionInventory
@@ -68,6 +69,7 @@ Mw:
         name: CreateDoctrineMigrations
         dependsOn:
           - migrateDatabase
+
     staticReplacements:
       TYPO3\CMS\Extbase\Mvc\Controller\ActionController: TYPO3\Flow\Mvc\Controller\ActionController
       TYPO3\CMS\Core\Utility\GeneralUtility: Mw\T3Compat\Utility\GeneralUtility
@@ -95,12 +97,14 @@ Mw:
       Tx_Extbase_Tests_Unit_BaseTestCase: TYPO3\Flow\Tests\UnitTestCase
       Tx_Extbase_Validation_Validator_AbstractValidator: TYPO3\Flow\Validation\Validator\AbstractValidator
       t3lib_div: Mw\T3Compat\Utility\GeneralUtility
+
     resourceExtensions:
       templates: {targetPath: Private/Templates, extensions: [html, htm]}
       languageFiles: {targetPath: Private/Language, extensions: [xml, xlf]}
       images: {targetPath: Public/Images, extensions: [jpeg, jpg, gif, tif, svg, eps, png]}
       javascript: {targetPath: Public/JavaScript, extensions: [js, coffee, ts]}
       css: {targetPath: Public/Stylesheets, extensions: [css, sass, less, scss]}
+
     classNameStrategies:
       extbase:
         name: ExtbaseNamespacedConversionStrategy
@@ -114,6 +118,9 @@ Mw:
       generic:
         name: GenericConversionStrategy
         position: end
+
+    defaults:
+      transformationVisitorNamespace: Mw\Metamorph\Step\TransformationVisitor\
 
 TYPO3:
   Flow:
