--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -107,6 +107,34 @@ Mw:
       javascript: {targetPath: Public/JavaScript, extensions: [js, coffee, ts]}
       css: {targetPath: Public/Stylesheets, extensions: [css, sass, less, scss]}
 
+    facts:
+      isSingleton:
+        expr: |
+          class.doesImplement('TYPO3\\CMS\\Core\\SingletonInterface') ||
+          class.doesImplement('t3lib_Singleton') ||
+          class.doesInherit('TYPO3\\CMS\\Extbase\\Persistence\\Repository') ||
+          class.doesInherit('Tx_Extbase_Persistence_Repository')
+      isEntity:
+        expr: |
+          class.doesInherit('TYPO3\\CMS\\Extbase\\DomainObject\\AbstractEntity') ||
+          class.doesInherit('Tx_Extbase_DomainObject_AbstractEntity')
+      isValueObject:
+        expr: |
+          class.doesInherit('TYPO3\\CMS\\Extbase\\DomainObject\\AbstractValueObject') ||
+          class.doesInherit('Tx_Extbase_DomainObject_AbstractValueObject')
+      isEntityOrValueObject:
+        expr: class.getFact('isEntity') || class.getFact('isValueObject')
+      isDirectEntityDescendant:
+        expr: |
+          class.getParentClass().getFullyQualifiedName() == 'TYPO3\\CMS\\Extbase\\DomainObject\\AbstractEntity' ||
+          class.getParentClass().getFullyQualifiedName() == 'Tx_Extbase_DomainObject_AbstractEntity'
+      isDirectValueObjectDescendant:
+        expr: |
+          class.getParentClass().getFullyQualifiedName() == 'TYPO3\\CMS\\Extbase\\DomainObject\\AbstractEntity' ||
+          class.getParentClass().getFullyQualifiedName() == 'Tx_Extbase_DomainObject_AbstractEntity'
+      isDirectEntityOrValueObjectDescendant:
+        expr: class.getFact('isDirectEntityDescendant') || class.getFact('isDirectValueObjectDescendant')
+
     classNameStrategies:
       extbase:
         name: ExtbaseNamespacedConversionStrategy
@@ -123,6 +151,7 @@ Mw:
 
     defaults:
       transformationVisitorNamespace: Mw\Metamorph\Step\TransformationVisitor\
+      factNamespace: Mw\Metamorph\Domain\Model\Fact\
 
 TYPO3:
   Flow:
