--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -112,6 +112,7 @@ Mw:
         expr: |
           class.doesImplement('TYPO3\\CMS\\Core\\SingletonInterface') ||
           class.doesImplement('t3lib_Singleton') ||
+          (class.getParentClass() != null && class.getParentClass().getFact('isSingleton')) ||
           class.doesInherit('TYPO3\\CMS\\Extbase\\Persistence\\Repository') ||
           class.doesInherit('Tx_Extbase_Persistence_Repository')
       isPrototype:
