--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -116,37 +116,35 @@ Mw:
     facts:
       isSingleton:
         expr: |
-          class.doesImplement('TYPO3\\CMS\\Core\\SingletonInterface') ||
-          class.doesImplement('t3lib_Singleton') ||
-          (class.getParentClass() != null && class.getParentClass().getFact('isSingleton')) ||
-          class.doesInherit('TYPO3\\CMS\\Extbase\\Persistence\\Repository') ||
-          class.doesInherit('Tx_Extbase_Persistence_Repository')
+          parent().fact('isSingleton') ||
+          implements('TYPO3\\CMS\\Core\\SingletonInterface') || implements('t3lib_Singleton') ||
+          inherits('TYPO3\\CMS\\Extbase\\Persistence\\Repository') || inherits('Tx_Extbase_Persistence_Repository')
       isPrototype:
-        expr: !class.getFact('isSingleton')
+        expr: !fact('isSingleton')
       isEntity:
         expr: |
-          class.doesInherit('TYPO3\\CMS\\Extbase\\DomainObject\\AbstractEntity') ||
-          class.doesInherit('Tx_Extbase_DomainObject_AbstractEntity')
+          inherits('TYPO3\\CMS\\Extbase\\DomainObject\\AbstractEntity') ||
+          inherits('Tx_Extbase_DomainObject_AbstractEntity')
       isValueObject:
         expr: |
-          class.doesInherit('TYPO3\\CMS\\Extbase\\DomainObject\\AbstractValueObject') ||
-          class.doesInherit('Tx_Extbase_DomainObject_AbstractValueObject')
+          inherits('TYPO3\\CMS\\Extbase\\DomainObject\\AbstractValueObject') ||
+          inherits('Tx_Extbase_DomainObject_AbstractValueObject')
       isEntityOrValueObject:
-        expr: class.getFact('isEntity') || class.getFact('isValueObject')
+        expr: fact('isEntity') || fact('isValueObject')
       isDirectEntityDescendant:
         expr: |
-          class.getParentClass().getFullyQualifiedName() == 'TYPO3\\CMS\\Extbase\\DomainObject\\AbstractEntity' ||
-          class.getParentClass().getFullyQualifiedName() == 'Tx_Extbase_DomainObject_AbstractEntity'
+          parent().name('TYPO3\\CMS\\Extbase\\DomainObject\\AbstractEntity') ||
+          parent().name('Tx_Extbase_DomainObject_AbstractEntity')
       isDirectValueObjectDescendant:
         expr: |
-          class.getParentClass().getFullyQualifiedName() == 'TYPO3\\CMS\\Extbase\\DomainObject\\AbstractValueObject' ||
-          class.getParentClass().getFullyQualifiedName() == 'Tx_Extbase_DomainObject_AbstractValueObject'
+          parent().name('TYPO3\\CMS\\Extbase\\DomainObject\\AbstractValueObject') ||
+          parent().name('Tx_Extbase_DomainObject_AbstractValueObject')
       isDirectEntityOrValueObjectDescendant:
-        expr: class.getFact('isDirectEntityDescendant') || class.getFact('isDirectValueObjectDescendant')
+        expr: fact('isDirectEntityDescendant') || fact('isDirectValueObjectDescendant')
       isController:
         expr: |
-          class.doesInherit('TYPO3\\CMS\\Extbase\\Mvc\\Controller\\ActionController') ||
-          class.doesInherit('Tx_Extbase_Mvc_Controller_ActionController')
+          inherits('TYPO3\\CMS\\Extbase\\Mvc\\Controller\\ActionController') ||
+          inherits('Tx_Extbase_Mvc_Controller_ActionController')
 
     classNameStrategies:
       extbase:
