--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -75,6 +75,10 @@ Mw:
         name: CreateDoctrineMigrations
         dependsOn:
           - migrateDatabase
+      resynchronize:
+        name: ResynchronizePackages
+        dependsOn:
+          - finalize
 
     staticReplacements:
       TYPO3\CMS\Extbase\Mvc\Controller\ActionController: TYPO3\Flow\Mvc\Controller\ActionController
