Register classes from 3rd party packages

--- a/Configuration/Objects.yaml
+++ b/Configuration/Objects.yaml
@@ -140,3 +140,6 @@ Symfony\Component\Console\Output\ConsoleOutput:
   className: Symfony\Component\Console\Output\ConsoleOutput
   scope: prototype
   autowiring: off
+
+Helmich\PhpEvaluator\Evaluator\Evaluator:
+  className: Helmich\PhpEvaluator\Evaluator\Evaluator
